--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -81,14 +81,14 @@
       "michel_d1": "Med en forkjærlighet til naturen og friluftsliv, har <1>Michel</1> en lidenskap for miljøet og å bidra med å løse problemer relatert til klimaendringer.",
       "michel_d2": "Han var med på å grunnlegge BiomimicryNorway, en frivillig organisasjon som er dedikert til å utdanne mennesker og selskaper om bærekraftig innovasjon inspirert av naturen. Han har brukt mye energi på å hjelpe forskjellige oppstartsbedrifter og initiativer de siste årene ved å bruke sine mange ferdigheter, alt fra design til forretningsmodellering for sirkulær økonomi.",
       "michel_d3": "Amongst other things he has contributed building for Gruten, the first norwegian urban farm growing mushrooms on coffee grounds. He is also involved with Pådriv on projects related to sustainable urban development.",
-      "karolina_img_d": "Backend Developer",
-      "karolina_d": "Motivated to contribute and solve problems of value to people and the earth we live on, <1>Karolina</1> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> She has previously studied Psychology and Applied Computer Science, and is currently a Computer Engineering student at OsloMet.<6/>She enjoys being active in nature, as well as with yoga and martial arts.",
-      "gro_img_d": "UX / UI and Frontend Developer",
-      "gro_d": "Motivated to contribute and solve problems of value to people and the earth we live on, <1>Gro</1> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> She has previously studied Psychology and Applied Computer Science, and is currently a Computer Engineering student at OsloMet.<6/>She enjoys being active in nature, as well as with yoga and martial arts.",
-      "kristian_img_d": "Developer Trainee",
-      "kristian_d": "With us as an intern, <1>Kristian</1> is motivated to make our platform as user-friendly and self-driven as possible, which in turn will hopefully make the process of including green spaces in our cities a simple task.<3/><4/> He is an aspiring Software Developer, currently a Computer Engineering student at OsloMet. <6/>Apart from his studies, he enjoys being in the outdoors year around, where you can find him far up in the steep mountains.",
-      "sanne_img_d": "Developer Trainee",
-      "sanne_d": "Motivated to contribute and solve problems of value to people and the earth we live on, <1>Sanne</1> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> She has previously studied Psychology and Applied Computer Science, and is currently a Computer Engineering student at OsloMet.<6/>She enjoys being active in nature, as well as with yoga and martial arts."
+      "karolina_img_d": "Cloud Developer",
+      "karolina_d": "Mangler <1>Karolina</1> norsk oversettelse",
+      "gro_img_d": "UX / UI and Frontend Utvikler",
+      "gro_d": "Inspirert til å bidra med og løse problemer av verdi for mennesker og jorden vi lever på, ble <1>Gro</1> med på SquareRoot motivert til å gjøre implementasjonen av grøntarealer i urbane områder mer tilgjengelig for alle involverte aktører.<3/><4/> Vedsiden av SquareRoot og Dataingeniørstudiet på OsloMet, trives hun med yoga og kampsport, og elsker å utforske nye steder.",
+      "kristian_img_d": "UX/UI and Frontend Praksisstudent",
+      "kristian_d": "Kristian er motivert til å gjøre plattformen vår så brukervennlig og selvdreven som mulig, noe som forhåpentligvis resulterer i å gjøre implementasjonen av grøntområder i byene en enkel prosess. <3/><4/> Han ser frem til å bli en programutvikler etter han fullfører graden sin i Dataingeniør på OsloMet. Vedsiden av studiene, trives Kristian med å være utendørs året rundt, gjerne høyt opp i fjellene.",
+      "sanne_img_d": "UX/UI and Frontend Praksisstudent",
+      "sanne_d": "<1>Sanne</1> har en lidenskap for miljøet og dyrene, og ønsker å utvikle mer bærekraftige måter å leve på. Hun ble en del av SquareRoot for å bidra med en grønnere framtid med vår økologiske løsning. Hun trives med å være i nærheten av havet, i godt selskap og god mat. <3/><4/> Hun fullfører sitt siste år i bachelorgraden Anvendt Datateknologi på OsloMet. "
     }
   },
   "contact_page": {
