--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -81,14 +81,14 @@
       "michel_d1": "A lover of nature and the outdoors, <1>Michel</1> is passionate about the environment and contributing to solving climate change.",
       "michel_d2": "He co-founded BiomimicryNorway, an NGO dedicated to educating people and companies about sustainable innovation inspired by nature. He has spent a great deal of energy helping various startups and initiatives in the past years using his many skills ranging from design to business modelling for Circular Economy.",
       "michel_d3": "Amongst other things he has contributed building for Gruten, the first norwegian urban farm growing mushrooms on coffee grounds. He is also involved with Pådriv on projects related to sustainable urban development.",
-      "karolina_img_d": "Backend Developer",
-      "karolina_d": "Motivated to contribute and solve problems of value to people and the earth we live on, <1>Karolina</1> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> She has previously studied Psychology and Applied Computer Science, and is currently a Computer Engineering student at OsloMet.<6/>She enjoys being active in nature, as well as with yoga and martial arts.",
+      "karolina_img_d": "Cloud Developer",
+      "karolina_d": "missing, <1>Karolina</1> <3/><4/> english text. <6/>",
       "gro_img_d": "UX / UI and Frontend Developer",
-      "gro_d": "Motivated to contribute and solve problems of value to people and the earth we live on, <1>Gro</1> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> She has previously studied Psychology and Applied Computer Science, and is currently a Computer Engineering student at OsloMet.<6/>She enjoys being active in nature, as well as with yoga and martial arts.",
-      "kristian_img_d": "Developer Trainee",
+      "gro_d": "Inspired to contribute and solve problems of value to people and the planet earth, <1>Gro</> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> Besides SquareRoot and her studies in Computer Engineering at Oslo Metropolitan University, Gro loves to explore new places and enjoys yoga and training with martial arts.",
+      "kristian_img_d": "UX / UI og Frontend Intern",
       "kristian_d": "With us as an intern, <1>Kristian</1> is motivated to make our platform as user-friendly and self-driven as possible, which in turn will hopefully make the process of including green spaces in our cities a simple task.<3/><4/> He is an aspiring Software Developer, currently a Computer Engineering student at OsloMet. <6/>Apart from his studies, he enjoys being in the outdoors year around, where you can find him far up in the steep mountains.",
-      "sanne_img_d": "Developer Trainee",
-      "sanne_d": "Motivated to contribute and solve problems of value to people and the earth we live on, <1>Sanne</1> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> She has previously studied Psychology and Applied Computer Science, and is currently a Computer Engineering student at OsloMet.<6/>She enjoys being active in nature, as well as with yoga and martial arts."
+      "sanne_img_d": "UX / UI og Frontend Intern",
+      "sanne_d": "<1>Sanne<1/> is passionate about the environment and animals and wants to create a more sustainable way of living. She joined Squareroot to contribute to a greener future with our ecological solution. She enjoys being near the ocean with good company and delicious food.<3/><4/> She is finishing her last year of her bachelor degree in Applied Computer Science at Oslo Metropolitan University."
     }
   },
   "contact_page": {
