--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -20,7 +20,7 @@
   "account": "Account Settings",
   "log_out": "Log Out",
   "or": "OR",
-  "start": "Start prosjekt",
+  "start": "Start project",
   "home_page": {
     "hero": {
       "description": "Plan, design and order greenspaces inside, outside and on top of buildings<1/>-<3> all in one place.</3>",
