--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -17,7 +17,7 @@
   "partner": "BLI EN PARTNER",
   "signIn": "Logg inn",
   "my_projects": "Mine Prosjekter",
-  "account": "",
+  "account": "Kontoinnstillinger",
   "log_out": "Logg Ut",
   "or": "ELLER",
   "start": "Start prosjekt",
@@ -80,7 +80,7 @@
       "michel_img_d": "Grunnlegger og COO",
       "michel_d1": "Med en forkjærlighet til naturen og friluftsliv, har <1>Michel</1> en lidenskap for miljøet og å bidra med å løse problemer relatert til klimaendringer.",
       "michel_d2": "Han var med på å grunnlegge BiomimicryNorway, en frivillig organisasjon som er dedikert til å utdanne mennesker og selskaper om bærekraftig innovasjon inspirert av naturen. Han har brukt mye energi på å hjelpe forskjellige oppstartsbedrifter og initiativer de siste årene ved å bruke sine mange ferdigheter, alt fra design til forretningsmodellering for sirkulær økonomi.",
-      "michel_d3": "Amongst other things he has contributed building for Gruten, the first norwegian urban farm growing mushrooms on coffee grounds. He is also involved with Pådriv on projects related to sustainable urban development.",
+      "michel_d3": "Michel har også bidratt med å bygge for Gruten, den første norske urbane gården som dyrker sopp på kaffegrut. Han er også involvert med Pådriv i prosjekter knyttet til bærekraftig byutvikling.",
       "karolina_img_d": "Cloud Developer",
       "karolina_d": "Mangler <1>Karolina</1> norsk oversettelse",
       "gro_img_d": "UX / UI and Frontend Utvikler",
@@ -95,18 +95,18 @@
     "title": "Kontakt oss",
     "subtitle": "Hvordan kan vi hjelpe deg?",
     "email": "E-post",
-    "email_notif_title": "Email sent!",
-    "email_notif_text": "We will get back to you as soon as possible.",
+    "email_notif_title": "E-post sendt!",
+    "email_notif_text": "Vi vil straks komme tilbake til deg.",
     "phone": "Telefon",
     "or": "eller",
     "send_message": "Send oss en melding",
-    "send": "Sende",
+    "send": "Send",
     "accept1": "Jeg godtar SquareRoots <1>vilkår for bruk</1> og <3>personvernerklæring</3>",
     "accept2": "Jeg ønsker å iblant motta nyhetsbrev fra SquareRoot om tilbud, nyheter og oppdateringer innen grønn byutvikling."
   },
   "partner_page": {
     "title": "Bli partner",
-    "subtitle": "Sammen gjør vi byene våres grønne. Bokstavelig talt.",
+    "subtitle": "Sammen gjør vi byene våres grønne.",
     "description": "Vi ønsker å samarbeide med alle aktører i planleggingen og utformingen av urbane grøntområder. Dette er for at vi kan gjøre arbeidsprosessen sømløs slik at du kan lage og vedlikeholde motstandsdyktige grøntområder.",
     "contact": "Ta kontakt for en uforpliktende samtale",
     "RED_d": "Utforsk konsepter som vil gjøre bygningen din grønnere",
