added some missing footer translations

--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -56,8 +56,8 @@
     }
   },
   "footer": {
-    "description": "",
-    "button": "",
+    "description": "Vi er den nye plattformen for grønne områder",
+    "button": "Fortell oss om prosjektet ditt",
     "greenspaces": "Grønne Arealer",
     "rooftop": "Takhage",
     "rainbed": "Regnseng",
