Added content and edited some design on Who

--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -84,9 +84,9 @@
       "karolina_img_d": "Cloud Developer",
       "karolina_d": "Mangler <1>Karolina</1> norsk oversettelse",
       "gro_img_d": "UX / UI and Frontend Utvikler",
-      "gro_d": "Inspirert til å bidra med og løse problemer av verdi for mennesker og jorden vi lever på, ble <1>Gro</1> med på SquareRoot motivert til å gjøre implementasjonen av grøntarealer i urbane områder mer tilgjengelig for alle involverte aktører.<3/><4/> Vedsiden av SquareRoot og Dataingeniørstudiet på OsloMet, trives hun med yoga og kampsport, og elsker å utforske nye steder.",
+      "gro_d": "Inspirert til å bidra med og løse problemer av verdi for mennesker og jorden vi lever på, ble <1>Gro</1> med på SquareRoot for å gjøre implementasjonen av grøntarealer i urbane områder mer tilgjengelig for alle involverte aktører.<3/><4/> Vedsiden av SquareRoot og Dataingeniørstudiet på OsloMet, trives hun med yoga og kampsport, og elsker å utforske nye steder.",
       "kristian_img_d": "UX/UI and Frontend Praksisstudent",
-      "kristian_d": "Kristian er motivert til å gjøre plattformen vår så brukervennlig og selvdreven som mulig, noe som forhåpentligvis resulterer i å gjøre implementasjonen av grøntområder i byene en enkel prosess. <3/><4/> Han ser frem til å bli en programutvikler etter han fullfører graden sin i Dataingeniør på OsloMet. Vedsiden av studiene, trives Kristian med å være utendørs året rundt, gjerne høyt opp i fjellene.",
+      "kristian_d": "<1>Kristian</1> er motivert til å gjøre plattformen vår så brukervennlig og selvdreven som mulig, noe som forhåpentligvis resulterer i å gjøre implementasjonen av grøntområder i byene en enkel prosess. <3/><4/> Han ser frem til å bli en programutvikler etter han fullfører graden sin i Dataingeniør på OsloMet. Vedsiden av studiene, trives Kristian med å være utendørs året rundt, gjerne høyt opp i fjellene.",
       "sanne_img_d": "UX/UI and Frontend Praksisstudent",
       "sanne_d": "<1>Sanne</1> har en lidenskap for miljøet og dyrene, og ønsker å utvikle mer bærekraftige måter å leve på. Hun ble en del av SquareRoot for å bidra med en grønnere framtid med vår økologiske løsning. Hun trives med å være i nærheten av havet, i godt selskap og god mat. <3/><4/> Hun fullfører sitt siste år i bachelorgraden Anvendt Datateknologi på OsloMet. "
     }
