--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -84,11 +84,11 @@
       "karolina_img_d": "Cloud Developer",
       "karolina_d": "missing, <1>Karolina</1> <3/><4/> english text. <6/>",
       "gro_img_d": "UX / UI and Frontend Developer",
-      "gro_d": "Inspired to contribute and solve problems of value to people and the planet earth, <1>Gro</> joined SquareRoot with a motivation to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> Besides SquareRoot and her studies in Computer Engineering at Oslo Metropolitan University, Gro loves to explore new places and enjoys yoga and training with martial arts.",
+      "gro_d": "Inspired to contribute and solve problems of value to people and the planet earth, <1>Gro</1> joined SquareRoot to make the implementations of green spaces in urban locations more available to all stakeholders.<3/><4/> Besides SquareRoot and her studies in Computer Engineering at Oslo Metropolitan University, Gro loves to explore new places and enjoys yoga and training with martial arts.",
       "kristian_img_d": "UX / UI og Frontend Intern",
-      "kristian_d": "With us as an intern, <1>Kristian</1> is motivated to make our platform as user-friendly and self-driven as possible, which in turn will hopefully make the process of including green spaces in our cities a simple task.<3/><4/> He is an aspiring Software Developer, currently a Computer Engineering student at OsloMet. <6/>Apart from his studies, he enjoys being in the outdoors year around, where you can find him far up in the steep mountains.",
+      "kristian_d": "With us as an intern, <1>Kristian</1> is motivated to make our platform as user-friendly and self-driven as possible, which in turn will hopefully make the process of including green spaces in our cities a simple task.<3/><4/> He is an aspiring Software Developer, currently a Computer Engineering student at OsloMet. Apart from his studies, he enjoys being in the outdoors year around, where you can find him far up in the steep mountains.",
       "sanne_img_d": "UX / UI og Frontend Intern",
-      "sanne_d": "<1>Sanne<1/> is passionate about the environment and animals and wants to create a more sustainable way of living. She joined Squareroot to contribute to a greener future with our ecological solution. She enjoys being near the ocean with good company and delicious food.<3/><4/> She is finishing her last year of her bachelor degree in Applied Computer Science at Oslo Metropolitan University."
+      "sanne_d": "<1>Sanne</1> is passionate about the environment and animals and wants to create a more sustainable way of living. She joined Squareroot to contribute to a greener future with our ecological solution. <3/><4/> She enjoys being near the ocean with good company and delicious food. She is finishing her last year of her bachelor degree in Applied Computer Science at Oslo Metropolitan University."
     }
   },
   "contact_page": {
