making contact form work on the home page

--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -100,6 +100,7 @@
     "phone": "Phone",
     "or": "or",
     "send_message": "Send us a message",
+    "request_demo": "Request Demo",
     "send": "Send",
     "accept1": "I accept SquareRoot's <1>Terms of Use</1> and <3>Privacy Policy</3>",
     "accept2": "I want to occasionally receive newsletters from SquareRoot about offers, news and updates in green urban development"
