--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -100,6 +100,7 @@
     "phone": "Telefon",
     "or": "eller",
     "send_message": "Send oss en melding",
+    "request_demo": "Be om Demo",
     "send": "Send",
     "accept1": "Jeg godtar SquareRoots <1>vilkår for bruk</1> og <3>personvernerklæring</3>",
     "accept2": "Jeg ønsker å iblant motta nyhetsbrev fra SquareRoot om tilbud, nyheter og oppdateringer innen grønn byutvikling."
