--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -84,7 +84,7 @@
       "kristian_img_d": "Developer Intern",
       "kristian_d": "With us as an intern, <1>Kristian</1> is motivated to make our platform as user-friendly and self-driven as possible, which in turn will hopefully make the process of including green spaces in our cities a simple task.<3/><4/> He is an aspiring Software Developer, currently a Computer Engineering student at OsloMet. Apart from his studies, he enjoys being in the outdoors year around, where you can find him far up in the steep mountains.",
       "sanne_img_d": "Developer Intern",
-      "sanne_d": "<1>Sanne</1> is passionate about the environment and animals and wants to create a more sustainable way of living. She joined Squareroot to contribute to a greener future with our ecological solution. <2/> <3/>  She enjoys being near the ocean with good company and delicious food. She is finishing her last year of her bachelor degree in Applied Computer Science at Oslo Metropolitan University."
+      "sanne_d": "<0>Sanne</0> is passionate about the environment and animals and wants to create a more sustainable way of living. She joined Squareroot to contribute to a greener future with our ecological solution. <2/> <3/>  She enjoys being near the ocean with good company and delicious food. She is finishing her last year of her bachelor degree in Applied Computer Science at Oslo Metropolitan University."
     }
   },
   "contact_page": {
@@ -122,12 +122,13 @@
     },
     "Regnbed": {
       "title": "Rain Garden",
-      "description": " A rain garden stores rainwater runoff from roofs and other hard surfaces.   Keeping the water out of the sewage system when it rains hard reduces the risk of floods. <1/><2/>Our plants for this urban green space are carefully chosen with plants for the wet-zone, able to stand up to 48 hours in the water and drought tolerant plants at the borders, the dry-zone.    <4/><5/>It is an efficient tool to manage stormwater, improve biodiversity and the attractiveness of our cities."
+      "description": " A rain garden stores rainwater runoff from roofs and other hard surfaces.   Keeping the water out of the sewage system when it rains hard reduces the risk of floods. <1/><2/>Our plants for this urban green space are carefully chosen with plants for the wet-zone, able to stand up to 48 hours in the water and drought tolerant plants at the borders, the dry-zone.    <3/><4/>It is an efficient tool to manage stormwater, improve biodiversity and the attractiveness of our cities."
     },
     "Innendørsplanter": {
       "title": "Indoor Plants",
-      "description": " Creating cities where people love to live and work means greening inside buildings as well.  Indoor plants clean the air and have a positive effect on our wellbeing.  Building standards like WELL actively promote integrating plants indoor.<1/><2/>Our partner Leaf has extensive expertise with indoor plants.  Netflix’ offices in Amsterdam are just one of their amazing projects.  Incredible aesthetics are combined with minimal maintenance.<4/><5/>Plants are grown in modular rectangular tray directly at the nursery and make it easy for the interior architect to design and integrate green jungles in buildings."
+      "description": " Creating cities where people love to live and work means greening inside buildings as well.  Indoor plants clean the air and have a positive effect on our wellbeing.  Building standards like WELL actively promote integrating plants indoor.  <3/><4/>  Our partner Leaf has extensive expertise with indoor plants.  Netflix’ offices in Amsterdam are just one of their amazing projects.  Incredible aesthetics are combined with minimal maintenance.<5/><6/>Plants are grown in modular rectangular tray directly at the nursery and make it easy for the interior architect to design and integrate green jungles in buildings."
     },
-    "plantlist": "Plant List"
-  }
+
+    "plantlist": "Plant List",
+    "general_info": "On our platform, you will be able to put together concepts in a project and order it through our website.  <0/><1/> The plantlist is countinously updated."}
 }
