bug in trans fixed

--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -130,5 +130,6 @@
     },
 
     "plantlist": "Plant List",
-    "general_info": "On our platform, you will be able to put together concepts in a project and order it through our website.  <0/><1/> The plantlist is countinously updated."}
+    "general_info": "On our platform, you will be able to put together concepts in a project and order it through our website.<1/><2/> The plantlist is countinously updated."
+  }
 }
