added missing single cat translation

--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -128,7 +128,7 @@
       "title": "Indoor Plants",
       "description": " Creating cities where people love to live and work means greening inside buildings as well.  Indoor plants clean the air and have a positive effect on our wellbeing.  Building standards like WELL actively promote integrating plants indoor.  <3/><4/>  Our partner Leaf has extensive expertise with indoor plants.  Netflix’ offices in Amsterdam are just one of their amazing projects.  Incredible aesthetics are combined with minimal maintenance.<5/><6/>Plants are grown in modular rectangular tray directly at the nursery and make it easy for the interior architect to design and integrate green jungles in buildings."
     },
-    "plantlist": "Plant List",
+    "plant_list": "Plant List",
     "general_info": "On our platform, you will be able to put together concepts in a project and order it through our website.<1/><2/> The plantlist is countinously updated."
   },
   "error_page": {
